add login with password method
