# docs/swagger.yaml
@@ -1,13 +1,4 @@
 definitions:
-  http.UserRequest:
-    properties:
-      account:
-        description: 帳號
-        type: string
-      password:
-        description: 密碼
-        type: string
-    type: object
   http.UserRequestUpdateAccount:
     properties:
       new_account:
@@ -18,6 +9,15 @@ definitions:
     properties:
       new_password:
         description: 更新密碼
+        type: string
+    type: object
+  main_domain_crud_delivery_http.UserRequest:
+    properties:
+      account:
+        description: 帳號
+        type: string
+      password:
+        description: 密碼
         type: string
     type: object
 host: localhost:8080
@@ -58,7 +58,7 @@ paths:
         name: register_body
         required: true
         schema:
-          $ref: '#/definitions/http.UserRequest'
+          $ref: '#/definitions/main_domain_crud_delivery_http.UserRequest'
       produces:
       - application/json
       responses:
@@ -140,7 +140,7 @@ paths:
         name: login_body
         required: true
         schema:
-          $ref: '#/definitions/http.UserRequest'
+          $ref: '#/definitions/main_domain_crud_delivery_http.UserRequest'
       produces:
       - application/json
       responses:
@@ -241,12 +241,12 @@ paths:
       summary: Test Connect Cloud Run
       tags:
       - Test Connect
-  /loginAzure/:
+  /loginAzure/device:
     post:
       consumes:
       - application/json
       description: 登入
-      operationId: ToDisplayAccessToken
+      operationId: DeviceCodeLogin
       produces:
       - application/json
       responses:
@@ -258,9 +258,40 @@ paths:
           description: ok
           schema:
             type: string
-      summary: ToDisplayAccessToken
+      summary: DeviceCodeLogin
       tags:
-      - login To Display Access Token
+      - Login With Device Code
+  /loginAzure/password:
+    post:
+      consumes:
+      - application/json
+      description: 使用帳號、密碼登入 Azure
+      operationId: AccountPasswordLogin
+      parameters:
+      - description: 帳號
+        in: formData
+        name: account
+        required: true
+        type: string
+      - description: 密碼
+        in: formData
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Get Access Token Successful
+          schema:
+            type: string
+        "400":
+          description: ok
+          schema:
+            type: string
+      summary: AccountPasswordLogin
+      tags:
+      - Login With Password
 securityDefinitions:
   BearerOAuth2:
     authorizationUrl: ""
